Fix namespaces, update views, and add new ViewModels
- Corrected namespaces in multiple files from ViewMoldes to ViewModels.
Updated GameView.xaml to display track using UniformGrid.
- Revised GameView.xaml.cs to set DataContext to GameViewModel.
- Removed obsolete ViewModel files and re-added GameViewModel with updates.
- Added new MainMenuViewModel, MainWindowViewModel, and SplashScreenViewModel.
- Updated SlotcarRennenM320.csproj to manage GameData.json as a resource.
- Added new files: Projektplanung.md, GameData.cs, TrackNode.cs, and Orientation.cs.

--- a/SlotcarRennenM320/Views/GameView.xaml
+++ b/SlotcarRennenM320/Views/GameView.xaml
@@ -9,6 +9,41 @@
       Title="Game">
 
     <Grid>
-        
+        <ItemsControl ItemsSource="{Binding Track}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <UniformGrid Columns="10" Rows="15"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Grid Width="60" Height="60">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <!-- Yellow Dots (Corners) -->
+                            <Ellipse Fill="Yellow" Width="5" Height="5" Grid.Row="0" Grid.Column="0"/>
+                            <Ellipse Fill="Yellow" Width="5" Height="5" Grid.Row="0" Grid.Column="2"/>
+                            <Ellipse Fill="Yellow" Width="5" Height="5" Grid.Row="2" Grid.Column="0"/>
+                            <Ellipse Fill="Yellow" Width="5" Height="5" Grid.Row="2" Grid.Column="2"/>
+
+                            <!-- Middle Dot (Conditional) -->
+                            <Ellipse Fill="Yellow" Width="7" Height="7" Grid.Row="1" Grid.Column="1"
+                                     Visibility="{Binding IngoingOrientation, Converter={StaticResource OrientationToVisibilityConverter}}"/>
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </Grid>
 </Page>
