Refactor commands and add track loading features
- Added new XML namespaces and converters in App.xaml and GameView.xaml
- Replaced DelegateCommand implementation with improved version
- Added 'None' value to Orientation enum
- Updated SlotcarRennenM320.csproj to manage resources and folders
- Updated GameViewModel and MainMenuViewModel to use new DelegateCommand
- Added methods to load game data and reload track in GameViewModel
- Simplified GameView layout and data binding
- Added default.xml for track layout definition
- Added OrientationToAngleConverter and OrientationToVisibilityConverter
- Added TrackLoader service for loading track data with error handling

--- a/SlotcarRennenM320/App.xaml
+++ b/SlotcarRennenM320/App.xaml
@@ -1,8 +1,11 @@
 ﻿<Application x:Class="SlotcarRennenM320.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SlotcarRennenM320">
+             xmlns:local="clr-namespace:SlotcarRennenM320"
+             xmlns:converters="clr-namespace:SlotcarRennenM320.Converters">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <converters:OrientationToVisibilityConverter x:Key="OrientationToVisibilityConverter"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
